# PDEBench

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml  requirements.txt  requirements_datagen.txt  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: precommit.yml  python-package.yml  python-publish.py  python-publish.yml
OFormer/: README.md  loss_fn.py  train_burgers.py  utils.py
OFormer/nn_module/: attention_module.py  cnn_module.py  decoder_module.py  encoder_module.py  fourier_neural_operator.py
ORCA/: README.md  data_loaders.py  orca_pdebench.mml
ORCA/src/: data_loaders.py  embedder.py  main.py  startup-hook.sh  task_configs.py  utils.py
ORCA/src/configs/: PDE1DCFD.yaml  PDE2DCFD.yaml  PDEADV.yaml  PDEBG.yaml  PDEDC.yaml  PDEDS.yaml  PDERD.yaml  PDERD2D.yaml  PDESW.yaml
ORCA/src/datasets/: README.md
ORCA/src/otdd/: README.md  SUPPORT.md  advanced_example.py  environment.yaml  example.py  requirements.txt  setup.py
ORCA/src/otdd/otdd/: __init__.py  plotting.py  utils.py
ORCA/src/otdd/otdd/pytorch/: datasets.py  distance.py  flows.py  functionals.py  moments.py  nets.py  sqrtm.py  utils.py  wasserstein.py
ORCA/src/results/: README.md
pdebench/: __init__.py
pdebench/data_download/: README.md  download.py  download_direct.py  download_easydataverse.py  download_metadata.csv  example.env  pdebench_data_urls.csv  visualize_pdes.py
pdebench/data_download/config/: config.yaml
pdebench/data_gen/: example.env  gen_diff_react.py  gen_diff_sorp.py  gen_ns_incomp.py  gen_radial_dam_break.py  plot.py  uploader.py  velocity2vorticity.py
pdebench/data_gen/configs/: diff-react.yaml  diff-sorp.yaml  ns_incomp.yaml  radial_dam_break.yaml
pdebench/data_gen/configs/mode/: debug.yaml  default.yaml  slurm.yaml
pdebench/data_gen/data_gen_NLE/: Data_Merge.py  README.md  utils.py
pdebench/data_gen/data_gen_NLE/AdvectionEq/: advection_exact_Hydra.py  advection_multi_solution_Hydra.py  run_testset.sh  run_trainset.sh
pdebench/data_gen/data_gen_NLE/AdvectionEq/config/args/: beta1e-1.yaml  beta1e0.yaml  beta1e1.yaml  beta2e-1.yaml  beta2e0.yaml  beta4e-1.yaml  beta4e0.yaml  config.yaml
pdebench/data_gen/data_gen_NLE/AdvectionEq/config/multi/: beta1e-1.yaml  beta1e0.yaml  beta2e-1.yaml  beta2e0.yaml  beta4e-1.yaml  beta4e0.yaml  config.yaml  config2D.yaml
pdebench/data_gen/data_gen_NLE/BurgersEq/: burgers_Hydra.py  burgers_multi_solution_Hydra.py  run_testset.sh  run_trainset.sh
pdebench/data_gen/data_gen_NLE/BurgersEq/config/args/: config.yaml  possin_eps1e-1.yaml  possin_eps1e-2.yaml  possin_eps1e-3.yaml  possin_eps1e0.yaml  possin_eps1e1.yaml  possin_eps1e2.yaml  sin_eps1e-1.yaml  sin_eps1e-2.yaml  sin_eps1e-2_u01e-1.yaml  sin_eps1e-2_u01e-2.yaml  sin_eps1e-2_u01e1.yaml  sin_eps1e-2_u01e2.yaml  sin_eps1e-3.yaml  sin_eps1e0.yaml  sin_eps1e1.yaml  sin_eps1e2.yaml  sinsin_eps1e-2_du01.yaml  sinsin_eps1e-2_du025.yaml  sinsin_eps1e-2_du05.yaml  sinsin_eps1e-2_du1.yaml  sinsin_eps1e-2_du2.yaml  sinsin_eps1e-2_du5.yaml
pdebench/data_gen/data_gen_NLE/BurgersEq/config/multi/: 1e-1.yaml  1e-2.yaml  1e-3.yaml  1e0.yaml  2e-1.yaml  2e-2.yaml  2e-3.yaml  2e0.yaml  4e-1.yaml  4e-2.yaml  4e-3.yaml  4e0.yaml  config.yaml
pdebench/data_gen/data_gen_NLE/CompressibleFluid/: CFD_Hydra.py  CFD_multi_Hydra.py  run_testset.sh  run_testset_3DTurb.sh  run_testset_KHI.sh  run_trainset_1D.sh  run_trainset_1DShock.sh  run_trainset_1D_trans.sh  run_trainset_2D.sh  run_trainset_2DTurb.sh  run_trainset_3D.sh  run_trainset_3DTurb.sh
pdebench/data_gen/data_gen_NLE/CompressibleFluid/config/: config.yaml
pdebench/data_gen/data_gen_NLE/CompressibleFluid/config/args/: 1D_Multi.yaml  1D_Multi_shock.yaml  1D_Multi_trans.yaml  1D_ShockTube.yaml  1D_ShockTube2.yaml  1D_ShockTube3.yaml  1D_ShockTube4.yaml  1D_ShockTube5.yaml  1D_ShockTube6.yaml  1D_ShockTube7.yaml  2D_KH_M01_dk1.yaml  2D_KH_M01_dk10.yaml  2D_KH_M01_dk2.yaml  2D_KH_M01_dk5.yaml  2D_KH_M02_dk1.yaml  2D_KH_M04_dk1.yaml  2D_KH_M1_dk1.yaml  2D_KH_M2_dk1.yaml  2D_Multi_KH.yaml  2D_Multi_Rand.yaml  2D_Multi_Rand_HR.yaml  2D_Multi_Turb.yaml  2D_ShockTube.yaml  2D_TOV.yaml  3D_BlastWave.yaml  3D_Multi_Rand.yaml  3D_Multi_TurbM1.yaml  3D_TurbM05.yaml  3D_TurbM1.yaml  3D_TurbM2.yaml  3D_TurbM4.yaml  default.yaml
pdebench/data_gen/data_gen_NLE/ReactionDiffusionEq/: reaction_diffusion_2D_multi_solution_Hydra.py  reaction_diffusion_Hydra.py  reaction_diffusion_multi_solution_Hydra.py  run_DarcyFlow2D.sh  run_testset.sh  run_trainset.sh  run_trainset_2D.sh
pdebench/data_gen/data_gen_NLE/ReactionDiffusionEq/config/args/: Rho1e0_Nu1e0.yaml  Rho1e0_Nu2e0.yaml  Rho1e0_Nu5e-1.yaml  Rho1e0_Nu5e0.yaml  Rho1e1_Nu1e0.yaml  Rho1e1_Nu2e0.yaml  Rho1e1_Nu5e-1.yaml  Rho1e1_Nu5e0.yaml  Rho2e0_Nu1e0.yaml  Rho2e0_Nu2e0.yaml  Rho2e0_Nu5e-1.yaml  config_2D.yaml  (+5 more)
pdebench/data_gen/data_gen_NLE/config/: config.yaml
pdebench/data_gen/notebooks/: Analysis.ipynb
pdebench/data_gen/src/: data_io.py  plots.py  pytorch_dataset.py  sim_diff_react.py  sim_diff_sorp.py  sim_ns_incomp_2d.py  sim_radial_dam_break.py  utils.py  vorticity.py
pdebench/data_gen/src/_attic/: grf.py
pdebench/models/: analyse_result_forward.py  analyse_result_inverse.py  metrics.py  run_forward_1D.sh  run_inverse.sh  train_models_forward.py  train_models_forward_darcy.py  train_models_inverse.py
pdebench/models/config/: README.md  config.yaml  config_darcy.yaml  config_docs.md  config_rdb.yaml  results.yaml
pdebench/models/config/args/: config_1DCFD.yaml  config_2DCFD.yaml  config_3DCFD.yaml  config_Adv.yaml  config_Bgs.yaml  config_Darcy.yaml  config_ReacDiff.yaml  config_diff-react.yaml  config_diff-sorp.yaml  config_pinn_CFD1d.yaml  config_pinn_diff-react.yaml  config_pinn_diff-sorp.yaml  config_pinn_pde1d.yaml  config_pinn_swe2d.yaml  config_rdb.yaml
pdebench/models/fno/: fno.py  train.py  utils.py
pdebench/models/inverse/: inverse.py  train.py  utils.py
pdebench/models/pinn/: pde_definitions.py  train.py  utils.py
pdebench/models/unet/: train.py  unet.py  utils.py
tests/: test_vorticity.py
(+22 files in other folders)
